# vnkey-fcitx5

./: .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  README.md  canonicalize.cpp  canonicalize.h  engine.cpp  install.sh  package-lock.json  package.json  plan.md  remove-vnkey.md  render_utf8.cpp  render_utf8.h  rime_table.cpp  rime_table.h  tests.cpp  vietnamese.cpp
.github/workflows/: release.yml
scripts/: build-deb.sh  build-release-debs.sh  build-release-rpm.sh  build-rpm.sh
telebit-fcitx5/: CMakeLists.txt
telebit-fcitx5/src/: CMakeLists.txt  telebit-fcitx5-addon.conf.in  telebit-fcitx5.conf.in  telebit_fcitx5.cpp  telebit_fcitx5.h
vnkey-fcitx/: CMakeLists.txt
vnkey-fcitx/src/: vnkey.cpp  vnkey.h
